# HTTP-server-client

./: .gitignore
Http-client/: CMakeLists.txt  main.cpp
Http-client/ApplicationLogic/: CMakeLists.txt  CustomClient.h  SoapMessageCreator.cpp  SoapMessageCreator.h  XmlHandler.h  XmlParser.h  XmlStructures.h
Http-client/DatabaseConnector/: CMakeLists.txt  DatabaseConnector.h
Http-client/Networking/: CMakeLists.txt  Client.h  Connection.h  Message.h  Server.h
Http-client/Utilities/: ThreadSafeQueue.h
Http-server/: CMakeLists.txt  main.cpp
Http-server/ApplicationLogic/: CMakeLists.txt  CustomServer.h  SoapMessageCreator.cpp  SoapMessageCreator.h  XmlHandler.h  XmlParser.h  XmlStructures.h
Http-server/Networking/: Client.h  Client.h.autosave  Message.h  Server.h
Http-server/Utilities/: .CMakelists.txt.swp  CMakeLists.txt  ThreadSafeQueue.cpp  ThreadSafeQueue.h
